changes/5.14-rc1/3f605ee17f8e785ba6ff69bee8e584e377a3cf28
m68knommu: fix missing LCD splash screen data initializer

The kernel test robot reports that the "screen_bits" splash screen data
is missing for the dragen platform:

    arch/m68k/68000/dragen2.c:73:16: error: 'screen_bits' undeclared (first use in this function)
      73 |  LSSA = (long) screen_bits;
         |                ^~~~~~~~~~~
    arch/m68k/68000/dragen2.c:73:16: note: each undeclared identifier is reported only once for each function it appears in

Digging around a bit I found the screen_bits data structure was originally
in a screen.h file that was generated from a screen.xbm file. That was
removed in commit 0c0e6db80683 ("m68k: drop unused parts of 68VZ328
Makefile").

Other splash screen initializers for 68000 targets are kept here as the
C data structures so lets do the same for this one. Add the missing
screen.h file and include it in the dragen specific startup code.

Reported-by: kernel test robot <lkp@intel.com>
Signed-off-by: Greg Ungerer <gerg@linux-m68k.org>
Acked-by: Arnd Bergmann <arnd@arndb.de>

